--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
+    "@react-pdf/renderer": "^4.3.1",
     "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.12.2",
     "react": "^19.1.1",
