--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "preview": "vite preview --port 8080",
-    "start": "vite preview --port 8080"
+    "preview": "vite preview --host --port $PORT",
+    "start": "vite preview --host --port $PORT"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
