--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-pdf/renderer": "^4.3.1",
     "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.12.2",
+    "process": "^0.11.10",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3"
